fix: added JSDoc to all javascript files. Changed some functions while longer then 14 loc. Fixed some responsive css style on mobile view , navbar.

--- a/styles/board.css
+++ b/styles/board.css
@@ -233,7 +233,7 @@ content{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .mobile_navbar p {
